--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.2.post1
+anyio>=3.7.1,<4.0.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
