--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.2.post1
+anyio==3.7.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -40,6 +40,7 @@ django-password-validation==0.1.1
 django-phonenumber-field==8.0.0
 django-recaptcha==4.0.0
 django-two-factor-auth==1.17.0
+djangorestframework==3.15.2
 exceptiongroup==1.2.2
 executing==2.1.0
 fastjsonschema==2.20.0
@@ -86,6 +87,7 @@ lxml==5.3.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+meson==1.6.0
 mistune==3.0.2
 multidict==6.1.0
 nbclient==0.10.0
@@ -114,6 +116,7 @@ propcache==0.2.0
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pycairo==1.20.1
 pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.9.2
