Implement user authentication, dashboard, and profile views. Add tests and improve project structure.

--- a/dropship_project/requirements.txt
+++ b/dropship_project/requirements.txt
@@ -1,97 +1,10 @@
-aiohappyeyeballs
-aiohttp
-aiosignal
-annotated-types
-anyio
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asgiref
-astroid
-asttokens
-async-lru
-async-timeout
-attrs
-babel
-bash_kernel
-beautifulsoup4
-bleach
-blinker
-certifi
-cffi
-charset-normalizer
-click
-comm
-cryptography
-debugpy
-decorator
-defusedxml
-dill
-diskcache
-distro
-Django
-django-allauth
-django-axes
-django-formtools
-django-oauth-toolkit
-django-otp
-django-password-validation
-django-phonenumber-field
-django-recaptcha
-django-two-factor-auth
-djangorestframework
-exceptiongroup
-executing
-fastjsonschema
-filelock
-flake8
-Flask
-fqdn
-frozenlist
-fsspec
-gitdb
-GitPython
-grep-ast
-h11
-httpcore
-httpx
-huggingface-hub
-idna
-importlib_metadata
-ipykernel
-ipython
-isoduration
-isort
-itsdangerous
-jedi
-Jinja2
-jiter
-json5
-jsonpointer
-jsonschema
-jsonschema-specifications
-jupyter-events
-jupyter-kernel-gateway
-jupyter-lsp
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab
-jupyterlab_pygments
-jupyterlab_server
-jwcrypto
-litellm
-lxml
-MarkupSafe
-matplotlib-inline
-mccabe
-meson
-mistune
-multidict
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx
-notebook
+Django==3.2.10
+djangorestframework==3.12.4
+django-oauth-toolkit==1.5.0
+django-allauth==0.45.0
+django-axes==5.13.0
+django-recaptcha==2.0.6
+django-otp==1.0.2
+django-two-factor-auth==1.13.0
+django-sendgrid-v5==1.1.1
+django-crispy-forms==1.14.0
