--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
 	name = CrazYH@xs
-	email = worlddre3mer1991.proton.nu
+	email = worlddre3mer1991@proton.nu
 [safe]
 	directory = /home/user
