--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,13 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
+# Dependabot configuration for version updates
+# Specify package ecosystems and their respective locations for manifests.
 
 version: 2
+
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "requirements.txt" # Location of package manifests
+  - package-ecosystem: "npm"  # Specify the package manager (e.g., npm, pip, etc.)
+    directory: "/"             # Path to the package manifest
     schedule:
-      interval: "weekly"
+      interval: "weekly"       # Frequency of update checks
+      day: "monday"            # Day of the week to check for updates
+      time: "09:00"            # Time of day to check for updates (hh:mm)
+      timezone: "UTC"          # Timezone for the scheduled checks
