--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.editor.defaultBinaryEditor": "jupyter-notebook"
+    "workbench.editor.defaultBinaryEditor": "jupyter-notebook",
+    "python.analysis.autoImportCompletions": true
 }
