--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "workbench.editor.defaultBinaryEditor": "jupyter-notebook",
-    "python.analysis.autoImportCompletions": true
+    "python.analysis.autoImportCompletions": true,
+    "cmake.useCMakePresets": "always"
 }
