--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "workbench.editor.defaultBinaryEditor": "jupyter-notebook",
     "python.analysis.autoImportCompletions": true,
-    "cmake.useCMakePresets": "always"
+    "cmake.useCMakePresets": "always",
+    "cSpell.words": [
+        "aliexpress"
+    ]
 }
