--- a/dropship_project/requirements.txt
+++ b/dropship_project/requirements.txt
@@ -8,3 +8,4 @@ django-otp==1.5.4
 django-two-factor-auth==1.17.0
 django-sendgrid-v5==1.2.4
 django-crispy-forms==2.3
+flake8==4.0.1  # Added for code quality checks
